added groups api
